--- a/attendanceapp/templates/demo_create.html
+++ b/attendanceapp/templates/demo_create.html
@@ -1,10 +1,52 @@
-<form method="POST" enctype="multipart/form-data">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="./styles.css">
+</head>
+<body>
+
+    
+    <div class="main-container">
+
+        <div class="description">
+
+            <div class="circle" id="c1"></div>
+            <div class="circle" id="c2"></div>
+
+            <div class="description-box">
+
+                <h1 class="header">Welcome to MSU AI Club</h1>
+
+                <hr>
+
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit veniam temporibus soluta tempore similique quibusdam a dolores ipsam accusamus, cum, unde esse. Error aliquam, minus asperiores numquam consequatur doloribus sint.Quibusdam ab tempora aliquid odio architecto dignissimos vero nobis pariatur enim optio itaque eveniet, blanditiis ratione laboriosam laudantium id tempore magnam molestias quas iusto, fugit repellendus. Eaque ducimus maiores harum!
+                </p>
+                
+                <button class="learn-more">LEARN MORE</button>
+            </div>
+        </div>
+
+        <div class="form-container">
+            <form>
+                <form method="POST" enctype="multipart/form-data">
   
-    <!-- Security token -->
-    {% csrf_token %}
-  
-    <!-- Using the formset -->
-    {{ form.as_p }}
-      
-    <input type="submit" value="Submit">
-</form>
+                    <!-- Security token -->
+                    {% csrf_token %}
+                  
+                    <!-- Using the formset -->
+                    {{ form.as_p }}
+                      
+                    <input type="submit" value="Submit">
+                </form>
+            </form>
+        </div>
+    </div>
+</body>
+</html>
+
+
