Added group support

--- a/attendanceapp/templates/attendance-app.html
+++ b/attendanceapp/templates/attendance-app.html
@@ -28,7 +28,7 @@
         
     </div>
 
-    <script src="{% static 'js/app.js' %}"></script>
+    <script src="{% static 'js/main.js' %}"></script>
     <!-- <script src="static/animation.js"></script> -->
 </body>
 </html>
