--- a/attendanceapp/static/css/landing.css
+++ b/attendanceapp/static/css/landing.css
@@ -227,3 +227,10 @@ ul:nth-child(2){
 
     display: none;
 }
+
+.nav-list a{
+    font-style: inherit;
+    text-decoration: inherit;
+    color: inherit;
+    font-size: inherit;
+}
