--- a/attendanceapp/static/css/landing.css
+++ b/attendanceapp/static/css/landing.css
@@ -50,6 +50,8 @@ a {
     color: #00203c;
     border-radius: 5px;
     text-align: center;
+    position: relative;
+    z-index: 5;
 }
 .ctn:hover {
     background: white;
